Test DELETE /todos/{todo} endpoint and write least amount of code to pass
